--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Emmanuel Yeboah Manu <yeboahmanuemmanuel@gmail.com>
+Emmanuel Ukeme <eddieukeme84@gmail.com>
